--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,5 @@
 {% include base_path %}
-<link rel="icon" href="nonexistent.ico" type="image/x-icon">
+<link rel="icon" href="/images/book.png" type="image/png">
 
 
 <!-- end custom head snippets -->
